# langchain-agent

./: README.md  agent.py  notes.txt  pyproject.toml
notebooks/: 01_Your_First_AI_Agent.ipynb
notebooks/Exercises/: Exercise_1_Add_a_Second_Tool.ipynb
